[EDIT] Fix layout problems. Add only for news

--- a/Resources/Private/Styles/components/_component.cards.less
+++ b/Resources/Private/Styles/components/_component.cards.less
@@ -13,7 +13,7 @@
   &.card--border {
     border:3px solid @color-tertiary;
 
-    &:not(.card-plain):has(.btn) {
+    &.card--fixed-footer:has(.btn) {
 		padding-bottom: 90px;
 		@media @mq-medium {
 			padding-bottom: 0;
